<resources>
    <string name="app_name">Librespot Connect</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loggedIn">Logged in!</string>
    <string name="failedLoggingIn">Failed logging in!</string>
    <string name="playbackStarted">Playback started!</string>
    <string name="failedStartingPlayback">Failed starting playback!</string>
    <string name="logout">Logout</string>
    <string name="playerReady">Player is ready!</string>
    <string name="somethingWentWrong">Something went wrong!</string>
    <string name="playUri">Spotify URI to play</string>
    <string name="play">Play</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="resumed">Resumed!</string>
    <string name="paused">Paused!</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="skippedNext">Skipped to next!</string>
    <string name="skippedPrev">Skipped to previous!</string>
    <string name="sessionClosing">Disconnected!</string>
    <string name="connectedTo">Connected to:</string>
    <string name="noSong">Nothing Playing</string>
    <string name="artist">Artist</string>
    <string name="songCover">Song Image Cover</string>
    <string name="invalidTime">0:00</string>
    <string name="titleActivitySettings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="preferenceSpeakerName">Speaker Name</string>
    <string name="preferenceDeviceCategory">Device</string>
    <string name="preferenceSpeakerNameSummary">Changes this speakers name as visible from other devices</string>
    <string name="visible_as">Visible as:</string>
    <string name="notConnected">Not connected</string>
</resources>